--- a/sobre.html
+++ b/sobre.html
@@ -18,13 +18,13 @@
 
 <body>
 
-  <div class="nav-fixed"> 
-  <div class="menu">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-    </ul>
+  <div class="nav-fixed">
+    <div class="menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </div>
   </div>
- </div> 
 
 
   <div class="historia">
@@ -38,7 +38,7 @@
         DEEP CODE.
       </p>
       <p id="historia">
-        Trabalhamos além do que você pode imaginar, vamos até  o fundo e não ficamos só na superfície.
+        Trabalhamos além do que você pode imaginar, vamos até o fundo e não ficamos só na superfície.
       </p>
       <h4 id="historia">DEEP CODE uma empresa que vai além do que voce imagina.</h4>
     </div>
@@ -72,7 +72,7 @@
     <div class="equipe">
       <h1>Equipe DEEP CODE</h1>
     </div>
-    <div class="conteudo-membros">
+    <!-- <div class="conteudo-membros">
       <div id="carouselExampleDark" class="carousel carousel-dark slide">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
@@ -121,10 +121,10 @@
               <h5>Breno Guimaraes Oliveira </h5>
               <p>Desenvolvedor Mobile.</p>
             </div>
-          </div>
+          </div> -->
 
-          <!-- </div> -->
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+    <!-- </div> -->
+    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
@@ -138,16 +138,41 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4">
+          <img src="../imagens/breno.jpeg" alt="">
+        </div>
+        <div class="col-4">
+          <img src="../imagens/carlos.jpg" alt="">
+        </div>
+        <div class="col-4">
+          <img src="../imagens/gustavo.jpeg" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <img src="../imagens/henrique.jpeg" alt="">
+        </div>
+        <div class="col-4">
+          <img src="../imagens/igor.jpeg" alt="">
+        </div>
+        <div class="col-4">
+          <img src="../imagens/vitor.jfif" alt="">
+        </div>
+      </div>
+    </div>
 
 
 
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
 
 
 
