--- a/index.html
+++ b/index.html
@@ -165,10 +165,9 @@
   <div class="case">
     <div class="carrossel">
       <div class="container" id="img">
-        <img src="img/foto1.jpeg" alt="" height="100%" width="100%">
-        <img src="img/foto2.jpeg" alt="" height="100%" width="100%">
-        <img src="img/foto3.jpeg" alt="" height="100%" width="100%">
-        <img src="img/foto4.jpeg" alt="" height="100%" width="100%">
+        <img src="img/foto1.png" alt="" height="100%" width="100%">
+        <img src="img/foto2.png" alt="" height="100%" width="100%">
+        <img src="img/foto3.png" alt="" height="100%" width="100%">
         <img src="img/foto5.jpeg" alt="" height="100%" width="100%">
         <img src="img/foto11.jpeg" alt="" height="100%" width="100%">
         <img src="img/foto6.jpeg" alt="" height="100%" width="100%">
@@ -234,7 +233,7 @@
   <!-- the end Contato -->
 
 
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
